Pull up following revision(s) (requested by tron in ticket #914): 	sbin/fsck_ext2fs/main.c: revision 1.33 Ignore the "-P" option as intended to make this work with e.g. "fsck_flags=3D-pP" in "/etc/rc.conf". Patch supplied by Pierre Pronchery in PR bin/41490.